test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/compound_if_expression.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  if
  (
  identifier(a)
  +=
  const int(1)
  )
  return
  identifier(a)
  ;
  return
  const int(10)
  ;
  }
