test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/if_no_parens.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[12]:
  int
  identifier(main)
  (
  void
  )
  {
  if
  const int(0)
  return
  const int(1)
  ;
  }
